deploy/ui/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      serviceAccountName: ui-ksa
      containers:
        - name: ui
          image: ui:0.0.1
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: http-ui
              containerPort: 8080
      volumes:
        - name: confnginx
          configMap:
            name: confnginx
