deploy/ui/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  labels:
    app: ui
spec:
  type: ClusterIP
  selector:
    app: ui
  ports:
    - name: http-ui
      protocol: TCP
      port: 80
      targetPort: 3000
